--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   bloc: ^9.0.0
   font_awesome_flutter: ^10.8.0
+  web: ^1.1.1
 
 dev_dependencies:
   flutter_test:
